Fixes footer color bug with high contrast

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -222,6 +222,7 @@ footer #rodape {
   #footer_links {
     padding-top: 10px;
     padding-bottom: 0px;
+    background-color: none;
   }
   #government_links {
     padding-top: 10px;
